--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,7 +30,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Action to check out your repository's code
+        uses: actions/checkout@v2
+        
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16  # Use Node.js 16
 
       - name: Build and run Docker container
         run: |
