--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,14 +40,15 @@ jobs:
         run: zip -r deploy.zip . -x '*.git*'
 
       - name: Configure AWS credentials
-        uses: beantsalk-deploy@v12
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: Docker-React
-          environment_name: Docker-React-env
-          existing_bucket_name: elasticbeanstalk-eu-north-1-401735561383
-          aws-region: eu-north-1 
-          deployment_package: deploy.zip 
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set region eu-north-1
+      
+      - name: Deploy to Elastic Beanstalk
+        run: |
+          aws elasticbeanstalk create-application-version --application-name Docker-React --version-label 1234 --source-bundle S3Bucket=elasticbeanstalk-eu-north-1-401735561383,S3Key=deploy.zip
+          aws elasticbeanstalk update-environment --environment-name Docker-React-env --version-label 1234
+      
 
       
